# CodEye

./: README.md
src/: CodEyeEngine.py  appUI.py  cli.py  md_to_files.py  md_to_pdf.py
src/logs/chunks/: chunk_0_output.txt  chunk_0_prompt.txt
src/output_files/: gemini_python_output.md  gemini_python_output_debug.html  starman_architecture.md  starman_architecture_debug.html
src/output_files/path/to/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/output_files/path/to/starman/: __init__.py  cli.py  server.py  worker.py
tests/: test_cli.py  test_md_to_files.py
