[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starman"
version = "0.4017"
description = "High-performance preforking WSGI web server"
readme = "README.md"
authors = [
    { name = "Tatsuhiko Miyagawa", email = "miyagawa@bulknews.net" },
]
license = { text = "Artistic-1.0-Perl OR GPL-1.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Perl License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]
requires-python = ">=3.8"
dependencies = [
    "httptools>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests",
    "pytest-timeout",
    "setproctitle",
]

[project.urls]
"Homepage" = "https://github.com/miyagawa/Starman"
"Bug Tracker" = "https://github.com/miyagawa/Starman/issues"

[project.scripts]
starman = "starman.cli:main"
